--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
   testImplementation "org.junit.jupiter:junit-jupiter-api:5.3.1"
   testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.3.1"
+  testImplementation "io.mockk:mockk:1.11.0"
 }
 
 compileKotlin {
